--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,8 @@
+footer {
+  padding: 0 0.5em;
+  border-top: 1px solid #ccc;
+}
+
 
 @media only screen and (max-width: 480px) {
   body { font-size: 12px;}
