--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,4 @@
 
-html {
-  font-size: 100%;
-  overflow-y: scroll;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: none;
-}
-body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; }
-body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
 
 
 a { color: #12C; }
@@ -38,3 +29,13 @@ header p span { font-size: 0.8em; font-weight: normal;}
 li img { float:left; padding-right: 1em; }
 li p { font-size: 0.9em; font-style: italic; }
 
+footer {
+  padding: 0 0.5em;
+  border-top: 1px solid #ccc;
+}
+
+/* Smartphones (portrait) */
+@media only screen and (max-width: 480px) {
+  body { font-size: 12px;}
+  header p { padding-left: 4.5em;}
+}
